@@ -1,6 +1,5 @@
 PYTHON_VERSION:
   - python-2.7
-  - python-3.4
   - python-3.5
   - python-3.6
   - python-3.7
