@@ -19,10 +19,10 @@ For other frameworks and custom Python code, the agent exposes a set of <<api,AP
 The following Python versions are supported:
 
  * 2.7
- * 3.4 (Deprecated)
  * 3.5
  * 3.6
  * 3.7
+ * 3.8
 
 WARNING: Python 2.7 will reach End of Life on January 1, 2020.
 The Elastic APM agent will stop supporting Python 2.7 in the first major version after that date.
