@@ -184,6 +184,7 @@ setup_kwargs = dict(
         "starlette": ["starlette", "flask", "requests"],
         "opentracing": ["opentracing>=2.0.0"],
     },
+    python_requires=">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, <4",
     cmdclass={"test": PyTest},
     test_suite="tests",
     include_package_data=True,
