@@ -1,22 +1,22 @@
-pytest==4.6.5
-py==1.8.0
+pytest==4.6.9
+py==1.8.1
 more-itertools==4.1.0
-pluggy==0.13.0
-pytest-django==3.5.1
+pluggy==0.13.1
+pytest-django==3.8.0
 atomicwrites==1.1.5
 coverage==4.5.4
 pytest-cov==2.7.1
 pytest-localserver==0.5.0
-pytest-mock==1.10.4
+pytest-mock==2.0.0
 pytest-benchmark==3.2.2
 jsonschema==2.6.0
 configparser==4.0.2
 contextlib2==0.6.0
-importlib-metadata==0.23
-packaging==19.2
+importlib-metadata==1.5.0
+packaging==20.1
 Mako==1.1.0
 glob2==0.7
-parse==1.12.1
+parse==1.15.0
 parse-type==0.5.2
 pytest-bdd==3.2.1
 
