@@ -18,10 +18,15 @@ endif::[]
 ===== Bug fixes
 ////
 
-//=== Unreleased
+=== Unreleased
 
 // Unreleased changes go here
 // When the next release happens, nest these changes under the "Python Agent version 5.x" heading
+
+[float]
+===== Deprecations
+
+ * Python 3.4 is no longer supported.
 
 [[release-notes-5.x]]
 === Python Agent version 5.x
